[SBE] find with 0 batch size doesn't return a valid cursorId

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.9.0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Hide

      resmoke run --suite=core_sbe jstests/core/find_getmore_cmd.js

      resmoke run --suite=core_sbe jstests/core/find_getmore_bsonsize.js

      Show
      resmoke run --suite=core_sbe jstests/core/find_getmore_cmd.js resmoke run --suite=core_sbe jstests/core/find_getmore_bsonsize.js
    • Query Execution 2021-02-22, Query Execution 2021-03-08
    • None
    • None
    • None
    • None
    • None
    • None
    • None

          Assignee:
          Nikita Lapkov (Inactive)
          Reporter:
          Anton Korshunov
          Votes:
          0 Vote for this issue
          Watchers:
          2 Start watching this issue

            Created:
            Updated:
            Resolved: