SERVER-54491 Make PlanExecutorSBE::isEOF consistent with PlanExecutorImpl::isEOF